--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ html {
   background-color: #c9b5ab;
   font-family: font-family: 'PT Serif', serif;
   color: #222;
+  line-height: 1.5
 }
 
 h1, h2 {
@@ -15,6 +16,9 @@ img {
   width: 100%;
 }
 
+p {
+  font-weight: normal;
+}
 .fancy {
   font-size: 1.5rem;
   font-style: italic;
