--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 html {
   background-color: #c9b5ab;
-  font-family: font-family: 'PT Serif', serif;
+  font-family: 'PT Serif', serif;
   color: #222;
-  line-height: 1.5
+  line-height: 1.5;
 }
 
 h1, h2 {
