--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   background-color: #c9b5ab;
-  font-family: 'PT Serif', serif;
+  font-family: "PT Serif", serif;
   color: #222;
   line-height: 1.5;
 }
@@ -19,6 +19,7 @@ img {
 p {
   font-weight: normal;
 }
+
 .fancy {
   font-size: 1.5rem;
   font-style: italic;
@@ -36,14 +37,14 @@ nav ol {
   list-style-type: none;
 }
 
-nav a {
+a {
   color: #8f2440;
   text-decoration: none;
 }
 
-nav a:hover {
-color: #3f1622;
-text-decoration: underline;
+a:hover {
+  color: #3f1622;
+  text-decoration: underline;
 }
 
 figcaption {
